--- a/demo/12.样式表的重叠.html
+++ b/demo/12.样式表的重叠.html
@@ -1,9 +1,47 @@
 <!DOCTYPE html>
+<!-- align ：规知定 div 元素中的内容的水平对道齐方式。
+text-align：规定“元素中”的文本的水平对齐方式。
+两个属性回使用的地方不一样的！
+<div align="center">
+This is some text!
+</div>
+
+align直接写在是答div的属性
+
+<div style="text-align:center">
+text-align则是Css的属性
+margin：auto 0用于DIV框居中的定位。
+text-align用于DIV中内容的居中定位。 -->
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title></title>
+		<title>样式表的重叠</title>
+		<style type="text/css">
+			.item{
+				text-decoration: none;
+				border-right: solid 1px #808080;
+				color: #000000;
+				padding: 0 15px;
+			}
+			#navigation .last{
+				border-right: none;
+			}
+			#navigation{
+				background-color: aqua;
+				text-align: center;
+			}
+		</style>
 	</head>
 	<body>
+		<div id="navigation">
+			<a href="#" class="item">首页</a>
+			<a href="#" class="item">首页</a>
+			<a href="#" class="item">首页</a>
+			<a href="#" class="item">首页</a>
+			<a href="#" class="item">首页</a>
+			<a href="#" class="item">首页</a>
+			<a href="#" class="item">首页</a>
+			<a href="#" class="item last">首页</a>
+		</div>
 	</body>
 </html>
